// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeSwitch renders dark theme 1`] = `
<Tooltip
  content={
    <React.Fragment>
      Switch to Light Mode
    </React.Fragment>
  }
  position="bottom"
>
  <div>
    <Button
      className="kiali_fu6nkss kiali_fj999mp"
      onClick={[Function]}
      variant="secondary"
    >
      <Sun
        className="kiali_ft7uynw"
      />
    </Button>
    <Button
      className="kiali_fu6nkss kiali_fxx0nx6"
      onClick={[Function]}
      variant="primary"
    >
      <Moon
        className="kiali_ft7uynw"
      />
    </Button>
  </div>
</Tooltip>
`;

exports[`ThemeSwitch renders light theme 1`] = `
<Tooltip
  content={
    <React.Fragment>
      Switch to Dark Mode
    </React.Fragment>
  }
  position="bottom"
>
  <div>
    <Button
      className="kiali_fu6nkss kiali_fj999mp"
      onClick={[Function]}
      variant="primary"
    >
      <Sun
        className="kiali_ft7uynw"
      />
    </Button>
    <Button
      className="kiali_fu6nkss kiali_fxx0nx6"
      onClick={[Function]}
      variant="secondary"
    >
      <Moon
        className="kiali_ft7uynw"
      />
    </Button>
  </div>
</Tooltip>
`;
